--- a/news2.html
+++ b/news2.html
@@ -43,16 +43,16 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">ABOUT</a>
+                        <a class="nav-link" aria-current="page" href="aboutus.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">NEWSROOM</a>
+                        <a class="nav-link" href="news.html">NEWSROOM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">PARTNERS</a>
+                        <a class="nav-link" href="creators.html">OUR CREATORS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT US</a>
+                        <a class="nav-link" href="contactus.html">CONTACT US</a>
                     </li>
                     <li class="nav-item d-flex align-items-center">
                         <ul class="navbar-nav d-flex flex-row gap-3">
