--- a/main.html
+++ b/main.html
@@ -39,7 +39,8 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand m-0" href="#"><img src="./public/link@2x.png" alt="Bootstrap" width="90px"></a>
+            <a class="navbar-brand m-0" href="main.html"><img src="./public/link@2x.png" alt="Bootstrap"
+                    width="90px"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
@@ -54,16 +55,16 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">ABOUT</a>
+                        <a class="nav-link" aria-current="page" href="aboutus.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">NEWSROOM</a>
+                        <a class="nav-link" href="news.html">NEWSROOM</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">PARTNERS</a>
+                        <a class="nav-link" href="creators.html">OUR CREATORS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT US</a>
+                        <a class="nav-link" href="contactus.html">CONTACT US</a>
                     </li>
                     <li class="nav-item d-flex align-items-center">
                         <ul class="navbar-nav d-flex flex-row gap-3">
