final 1 (font,cards gap,footer)

--- a/ec.html
+++ b/ec.html
@@ -86,8 +86,8 @@
             <div class="text-white ">
                 <!-- <img class="position-absolute " src="./public/headphones.png" alt="" width="100%" style="z-index: -1;"> -->
                 <!-- <div> -->
-                <h1 class="align-self-start">Executor Creatives</h1>
-                <p class="fw-bold">Executor Creatives Crafting and executing campaigns for brands looking to tap
+                <h1 class="align-self-start f-inter">Executor Creatives</h1>
+                <p class="fw-bold f-inter">Executor Creatives Crafting and executing campaigns for brands looking to tap
                     into
                     <br> India's growing gaming appeal, connecting brands with gaming enthusiasts.
                 </p>
@@ -98,9 +98,9 @@
             <div class="d-flex justify-content-center flex-wrap text-black">
                 <img src="./public/ad.png" alt="">
                 <div class=" p-5">
-                    <h4 class="fw-bold">PERFORMANCE <br> MARKETING</h4>
+                    <h4 class="fw-bold f-inter">PERFORMANCE <br> MARKETING</h4>
                     <div class="bg-orange p-1 d-flex px-2 " style="width: 10rem;"></div>
-                    <p class="mt-4">Our comprehensive platform, revolutionizes online campaigns with user onboarding,
+                    <p class="mt-4 f-inter-100">Our comprehensive platform, revolutionizes online campaigns with user onboarding,
                         real-time
                         insights, rewards, and outstanding results. At Executor Creatives, we specialize in gaming
                         influencer marketing tailored to the interactive entertainment industry. Join forces with us to
@@ -111,9 +111,9 @@
             </div>
             <div class="d-flex justify-content-center flex-wrap-reverse text-black">
                 <div class=" p-5">
-                    <h4 class="fw-bold">PERFORMANCE <br> MARKETING</h4>
+                    <h4 class="fw-bold f-inter">PERFORMANCE <br> MARKETING</h4>
                     <div class="bg-orange p-1 d-flex px-2 " style="width: 10rem;"></div>
-                    <p class="mt-4">Our comprehensive platform, revolutionizes online campaigns with user onboarding,
+                    <p class="mt-4 f-inter-100">Our comprehensive platform, revolutionizes online campaigns with user onboarding,
                         real-time
                         insights, rewards, and outstanding results. At Executor Creatives, we specialize in gaming
                         influencer marketing tailored to the interactive entertainment industry. Join forces with us to
@@ -127,9 +127,9 @@
             <div class="d-flex justify-content-center flex-wrap text-black">
                 <img src="./public/ad.png" alt="">
                 <div class=" p-5">
-                    <h4 class="fw-bold">PERFORMANCE <br> MARKETING</h4>
+                    <h4 class="fw-bold f-inter">PERFORMANCE <br> MARKETING</h4>
                     <div class="bg-orange p-1 d-flex px-2 " style="width: 10rem;"></div>
-                    <p class="mt-4">Our comprehensive platform, revolutionizes online campaigns with user onboarding,
+                    <p class="mt-4 f-inter-100">Our comprehensive platform, revolutionizes online campaigns with user onboarding,
                         real-time
                         insights, rewards, and outstanding results. At Executor Creatives, we specialize in gaming
                         influencer marketing tailored to the interactive entertainment industry. Join forces with us to
@@ -200,14 +200,12 @@
                         <a href="#">Contact</a>
                     </div>
                     <div class="esports d-flex flex-column gap-2">
-                        <h4 class="orange">ESPORTS</h4>
-                        <a href="#">League of Legends</a>
-                        <a href="#">CS:GO</a>
-                        <a href="#">Rocket League</a>
-                        <a href="#">Rainbow</a>
-                        <a href="#">Valorant</a>
-                        <a href="#">Fortnite</a>
-                        <a href="#">All Teams</a>
+                        <h4 class="orange">ECOSYSTEM</h4>
+                        <a href="#">Executor Gaming</a>
+                        <a href="#">Executor Creatives</a>
+                        <a href="#">Team Executor</a>
+                        <a href="#">EXO Server</a>
+                        <a href="#">Exo News</a>
 
                     </div>
                 </section>
