--- a/eg.html
+++ b/eg.html
@@ -89,8 +89,8 @@
             <div class="text-white ">
                 <!-- <img class="position-absolute " src="./public/headphones.png" alt="" width="100%" style="z-index: -1;"> -->
                 <!-- <div> -->
-                <h1 class="align-self-start">Executor Gaming </h1>
-                <p class="fw-bold">
+                <h1 class="align-self-start f-inter">Executor Gaming </h1>
+                <p class="fw-bold f-inter">
                     Executor Gaming is a platform with the sole aim of powering esports <br> experiences.
                 </p>
                 <!-- </div> -->
@@ -103,12 +103,12 @@
                     <h1>
                         Gaming <br> Tournament IPs
                     </h1>
-                    <p>A combination of competitive and entertaining esports and
+                    <p class="f-inter">A combination of competitive and entertaining esports and
                         tournament IPs designed to engage with gaming communities, we
                         understand the immense value these communities bring to the
                         esports landscape.
                     </p>
-                    <p>
+                    <p class="f-inter">
                         Through our esports IPs, we provide a platform for both aspiring
                         and seasoned gamers to showcase their skills, battle it out on the
                         virtual stage, and earn recognition among their peers. These
@@ -124,9 +124,9 @@
         </section>
         <section class="pg-showdown d-flex justify-content-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="text-center">
-                <p class="fs-2">Pro Gaming Showdoun</p>
+                <p class="fs-2 f-inter">Pro Gaming Showdoun</p>
                 <img src="./public/pg-showdown.png" alt="">
-                <p>Pro Gaming Showdown is a unique concept where your favorite esports player will be bidding for you!
+                <p class="f-inter">Pro Gaming Showdown is a unique concept where your favorite esports player will be bidding for you!
                     Yes, you heard that right. Once you register, you will be part of the talent pool which will be made
                     available to the 8 captains who will be bidding for the most desired players to be a part of their
                     team. Each team will have a limited budget so they will have to spend their currency wisely in order
@@ -195,14 +195,12 @@
                         <a href="#">Contact</a>
                     </div>
                     <div class="esports d-flex flex-column gap-2">
-                        <h4 class="orange">ESPORTS</h4>
-                        <a href="#">League of Legends</a>
-                        <a href="#">CS:GO</a>
-                        <a href="#">Rocket League</a>
-                        <a href="#">Rainbow</a>
-                        <a href="#">Valorant</a>
-                        <a href="#">Fortnite</a>
-                        <a href="#">All Teams</a>
+                        <h4 class="orange">ECOSYSTEM</h4>
+                        <a href="#">Executor Gaming</a>
+                        <a href="#">Executor Creatives</a>
+                        <a href="#">Team Executor</a>
+                        <a href="#">EXO Server</a>
+                        <a href="#">Exo News</a>
 
                     </div>
                 </section>
