--- a/main.html
+++ b/main.html
@@ -158,10 +158,10 @@
                     <h1 class="f-oswald">GAMING &&nbsp</h1>
                     <h1 class="f-oswald orange"> ESPORTS</h1>
                 </div>
-                <p class="text-center">One stop for all the latest esports & gaming action.</p>
+                <p class="text-center f-inter">One stop for all the latest esports & gaming action.</p>
             </div>
             <div class="latest-news d-flex flex-column align-items-center my-5">
-                <h4 id="nik " class="f-oswald">LATEST NEWS</h4>
+                <h4 id="nik" class="f-oswald">LATEST NEWS</h4>
                 <div class="news-cards d-flex justify-content-center flex-wrap gap-4 ">
 
 
@@ -209,7 +209,7 @@
                     <h1 class="f-oswald">ECO</h1>
                     <h1 class="f-oswald orange">SYSTEM</h1>
                 </div>
-                <p class="text-center">Dive Into Our Diverse Ecosystem</p>
+                <p class="text-center f-inter">Dive Into Our Diverse Ecosystem</p>
             </div>
             <div class="ecosystem-cards d-flex justify-content-center" style="overflow-x: auto;">
 
@@ -222,7 +222,7 @@
                             <div class="card-body h-100 d-flex flex-column gap-3">
 
                                 <h4 class="card-title text-center">Exo News</h4>
-                                <p class="card-text text-wrap word-break">Our company leads the esports
+                                <p class="card-text text-wrap word-break f-inter">Our company leads the esports
                                     industry in Southeast Asia with
                                     ownership and operation of esports
                                     teams, social communities, original
@@ -243,7 +243,7 @@
                             <img src="./public/divelementorwidgetwrap@2x.png" alt="">
                             <div class="card-body h-100 d-flex flex-column gap-3">
                                 <h4 class="card-title text-center">Exo News</h4>
-                                <p class="card-text text-wrap word-break">Our company leads the esports
+                                <p class="card-text text-wrap word-break f-inter">Our company leads the esports
                                     industry in Southeast Asia with
                                     ownership and operation of esports
                                     teams, social communities, original
@@ -264,7 +264,7 @@
                             <img src="./public/divelementorwidgetwrap@2x.png" alt="">
                             <div class="card-body h-100 d-flex flex-column gap-3">
                                 <h4 class="card-title text-center">Exo News</h4>
-                                <p class="card-text text-wrap word-break">Our company leads the esports
+                                <p class="card-text text-wrap word-break f-inter">Our company leads the esports
                                     industry in Southeast Asia with
                                     ownership and operation of esports
                                     teams, social communities, original
@@ -285,7 +285,7 @@
                             <img src="./public/divelementorwidgetwrap@2x.png" alt="">
                             <div class="card-body h-100 d-flex flex-column gap-3">
                                 <h4 class="card-title text-center">Exo News</h4>
-                                <p class="card-text text-wrap word-break">Our company leads the esports
+                                <p class="card-text text-wrap word-break f-inter">Our company leads the esports
                                     industry in Southeast Asia with
                                     ownership and operation of esports
                                     teams, social communities, original
@@ -306,7 +306,7 @@
                             <img src="./public/divelementorwidgetwrap@2x.png" alt="">
                             <div class="card-body h-100 d-flex flex-column gap-3">
                                 <h4 class="card-title text-center">Exo News</h4>
-                                <p class="card-text text-wrap word-break">Our company leads the esports
+                                <p class="card-text text-wrap word-break f-inter">Our company leads the esports
                                     industry in Southeast Asia with
                                     ownership and operation of esports
                                     teams, social communities, original
@@ -327,7 +327,7 @@
                             <img src="./public/divelementorwidgetwrap@2x.png" alt="">
                             <div class="card-body h-100 d-flex flex-column gap-3">
                                 <h4 class="card-title text-center">Exo News</h4>
-                                <p class="card-text text-wrap word-break">Our company leads the esports
+                                <p class="card-text text-wrap word-break f-inter">Our company leads the esports
                                     industry in Southeast Asia with
                                     ownership and operation of esports
                                     teams, social communities, original
@@ -412,15 +412,15 @@
                         <img src="./public/doubleArrow.svg" alt=""></button>
                 </div>
             </div>
-            <div class="review  d-flex flex-column justify-content-center ">
-                <p class="text-black fw-medium text-center">&nbsp;&nbsp;&nbsp;&nbsp;My journey began as an esports
+            <div class="review  d-flex flex-column justify-content-center f-inter">
+                <p class="text-black fw-medium text-center f-inter">&nbsp;&nbsp;&nbsp;&nbsp;My journey began as an esports
                     player, but Thug knew that it wasn't viable career option in India at
                     that time. So I started my youtube journey, with a bunch of people I consider as family. We together
                     have experienced the highest of highs and lowest of lows, but what matters is that we stuck together
                     and aspire to grow TOGETHER.
                 </p>
                 <!-- <div> -->
-                <p class="text-center">Paniked (Ayush Rai) <br>
+                <p class="text-center f-inter">Paniked (Ayush Rai) <br>
                     Content Creator</p>
                 <!-- </div> -->
             </div>
@@ -443,7 +443,7 @@
 
 
 
-    <footer class="bg-black w-100">
+    <footer class="bg-black w-100 bottom-0">
         <!-- <div class="cross w-100"> -->
         <!-- <div class="pseudos"></div> -->
         <div class="cross bg-black">
@@ -482,14 +482,13 @@
                         <a href="#">Contact</a>
                     </div>
                     <div class="esports d-flex flex-column gap-2">
-                        <h4 class="orange">ESPORTS</h4>
-                        <a href="#">League of Legends</a>
-                        <a href="#">CS:GO</a>
-                        <a href="#">Rocket League</a>
-                        <a href="#">Rainbow</a>
-                        <a href="#">Valorant</a>
-                        <a href="#">Fortnite</a>
-                        <a href="#">All Teams</a>
+                        <h4 class="orange">ECOSYSTEM</h4>
+                        <a href="#">Executor Gaming</a>
+                        <a href="#">Executor Creatives</a>
+                        <a href="#">Team Executor</a>
+                        <a href="#">EXO Server</a>
+                        <a href="#">Exo News</a>
+                        
 
                     </div>
                 </section>
