--- a/news.html
+++ b/news.html
@@ -279,14 +279,12 @@
                         <a href="#">Contact</a>
                     </div>
                     <div class="esports d-flex flex-column gap-2">
-                        <h4 class="orange">ESPORTS</h4>
-                        <a href="#">League of Legends</a>
-                        <a href="#">CS:GO</a>
-                        <a href="#">Rocket League</a>
-                        <a href="#">Rainbow</a>
-                        <a href="#">Valorant</a>
-                        <a href="#">Fortnite</a>
-                        <a href="#">All Teams</a>
+                        <h4 class="orange">ECOSYSTEM</h4>
+                        <a href="#">Executor Gaming</a>
+                        <a href="#">Executor Creatives</a>
+                        <a href="#">Team Executor</a>
+                        <a href="#">EXO Server</a>
+                        <a href="#">Exo News</a>
 
                     </div>
                 </section>
