--- a/aboutus.html
+++ b/aboutus.html
@@ -88,8 +88,8 @@
                 <img src="./public/divelementorwidgetwrap1@2x.png" alt="">
                 <div class="text-end d-flex">
                     <div class="m-auto px-3">
-                        <h6>OUR MISSION</h6>
-                        <p>
+                        <h6 class="f-inter">OUR MISSION</h6>
+                        <p class="f-inter-100">
                             To build the leading gaming
                             ecosystem of communities
                             through innovative esport
@@ -147,31 +147,31 @@
 
         <section class="leadership-team d-flex justify-content-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="w-75 my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5 d-flex flex-column gap-5">
-                <p class="fs-2 text-black ">Our Leadership Team</p>
+                <p class="fs-2 text-black f-inter">Our Leadership Team</p>
                 <div class="team-members d-flex flex-wrap justify-content-center gap-5 w-100">
 
 
                     <div class="card " style="width: 15rem;">
                         <img src="./public/Surasak-Winij.png" class="card-img-top" alt="...">
                         <div class="card-body d-flex flex-column">
-                            <h6 class="card-title">Surasak Winij</h6>
-                            <p class="card-text">VP Talent Thailand</p>
+                            <h5 class="card-title f-inter">Surasak Winij</h6>
+                            <p class="card-text f-inter">VP Talent Thailand</p>
                             <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="card" style="width: 15rem;">
                         <img src="./public/Punit-Mantri.png" class="card-img-top" alt="...">
                         <div class="card-body d-flex flex-column">
-                            <h6 class="card-title">Punit Mantri</h6>
-                            <p class="card-text">Regional Financial Controller</p>
+                            <h5 class="card-title f-inter">Punit Mantri</h6>
+                            <p class="card-text f-inter">Regional Financial Controller</p>
                             <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="card" style="width: 15rem;">
                         <img src="./public/Sascha-Jochum.png" class="card-img-top" alt="...">
                         <div class="card-body d-flex flex-column">
-                            <h6 class="card-title">Sascha Jochum</h6>
-                            <p class="card-text">Director of Ampverse Labs &
+                            <h5 class="card-title f-inter">Sascha Jochum</h6>
+                            <p class="card-text f-inter">Director of Ampverse Labs &
                                 Web3</p>
                             <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
                         </div>
@@ -179,8 +179,8 @@
                     <div class="card" style="width: 15rem;">
                         <img src="./public/Rob-Gaxiola.png" class="card-img-top" alt="...">
                         <div class="card-body d-flex flex-column">
-                            <h6 class="card-title">Rob Gaxiola</h6>
-                            <p class="card-text">Head of Creative</p>
+                            <h5 class="card-title f-inter">Rob Gaxiola</h6>
+                            <p class="card-text f-inter">Head of Creative</p>
                             <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
                         </div>
                     </div>
@@ -259,14 +259,12 @@
                         <a href="#">Contact</a>
                     </div>
                     <div class="esports d-flex flex-column gap-2">
-                        <h4 class="orange">ESPORTS</h4>
-                        <a href="#">League of Legends</a>
-                        <a href="#">CS:GO</a>
-                        <a href="#">Rocket League</a>
-                        <a href="#">Rainbow</a>
-                        <a href="#">Valorant</a>
-                        <a href="#">Fortnite</a>
-                        <a href="#">All Teams</a>
+                        <h4 class="orange">ECOSYSTEM</h4>
+                        <a href="#">Executor Gaming</a>
+                        <a href="#">Executor Creatives</a>
+                        <a href="#">Team Executor</a>
+                        <a href="#">EXO Server</a>
+                        <a href="#">Exo News</a>
 
                     </div>
                 </section>
