--- a/es.html
+++ b/es.html
@@ -84,10 +84,10 @@
         <section class="exo-server my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div>
                 <div class="d-flex mb-1 justify-content-center ">
-                    <h1 class="f-oswald fw-bold m-0 text-black">FIND &nbsp;</h1>
-                    <h1 class="f-oswald fw-bold m-0 orange"> US</h1>
+                    <h1 class="f-oswald fw-bold m-0 text-black">EXO &nbsp;</h1>
+                    <h1 class="f-oswald fw-bold m-0 orange"> SERVER</h1>
                 </div>
-                <p class="text-black text-center">Exo Server is an innovative video games operating servers. Currently,
+                <p class="text-black text-center f-opensans">Exo Server is an innovative video games operating servers. Currently,
                     we operate
                     Exo
                     Town which reach over 120K gamers</p>
@@ -98,7 +98,7 @@
                 <img src="./public/../public/g2-esports.png" alt="">
                 <div>
                     <h3 class="f-oswald orange fw-bold">Exo Town</h3>
-                    <p>Launched in 2023. <br>
+                    <p class="f-opensans">Launched in 2023. <br>
                         Exo Town is a Cracked Java Edition Minecraft Server. Since the launch,
                         our server's player base is intermittently growing since it's first released,
                         users around all over the world playing our amazing gamemodes and
@@ -171,14 +171,12 @@
                         <a href="#">Contact</a>
                     </div>
                     <div class="esports d-flex flex-column gap-2">
-                        <h4 class="orange">ESPORTS</h4>
-                        <a href="#">League of Legends</a>
-                        <a href="#">CS:GO</a>
-                        <a href="#">Rocket League</a>
-                        <a href="#">Rainbow</a>
-                        <a href="#">Valorant</a>
-                        <a href="#">Fortnite</a>
-                        <a href="#">All Teams</a>
+                        <h4 class="orange">ECOSYSTEM</h4>
+                        <a href="#">Executor Gaming</a>
+                        <a href="#">Executor Creatives</a>
+                        <a href="#">Team Executor</a>
+                        <a href="#">EXO Server</a>
+                        <a href="#">Exo News</a>
 
                     </div>
                 </section>
