--- a/eg.html
+++ b/eg.html
@@ -28,7 +28,7 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand m-0" href="main.html"><img src="./public/link@2x.png" alt="Bootstrap"
+            <a class="navbar-brand m-0" href="index.html"><img src="./public/link@2x.png" alt="Bootstrap"
                     width="90px"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav">
@@ -126,7 +126,8 @@
             <div class="text-center">
                 <p class="fs-2 f-inter">Pro Gaming Showdoun</p>
                 <img src="./public/pg-showdown.png" alt="">
-                <p class="f-inter">Pro Gaming Showdown is a unique concept where your favorite esports player will be bidding for you!
+                <p class="f-inter">Pro Gaming Showdown is a unique concept where your favorite esports player will be
+                    bidding for you!
                     Yes, you heard that right. Once you register, you will be part of the talent pool which will be made
                     available to the 8 captains who will be bidding for the most desired players to be a part of their
                     team. Each team will have a limited budget so they will have to spend their currency wisely in order
