--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./footer.css">
     <link rel="stylesheet" href="./header.css">
     <link rel="stylesheet" href="./global.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -39,7 +39,7 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand m-0" href="main.html"><img src="./public/link@2x.png" alt="Bootstrap"
+            <a class="navbar-brand m-0" href="index.html"><img src="./public/link@2x.png" alt="Bootstrap"
                     width="90px"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav">
@@ -397,8 +397,8 @@
             </div>
         </section>
 
-        <section class="creators d-flex flex-wrap gap-5 justify-content-center my-0  my-sm-3 my-md-4 my-lg-5 my-xl-5 ">
-            <div class="executor-creatives d-flex flex-column gap-5 align-items-center">
+        <section class="creators d-flex flex-wrap gap-5 justify-content-center align-items-center my-0  my-sm-3 my-md-4 my-lg-5 my-xl-5 ">
+            <div class="executor-creatives d-flex flex-column gap-3 align-items-center">
                 <div>
                     <div class="d-flex ">
                         <h1 class="f-oswald m-0">EXECUTOR &nbsp;</h1>
@@ -413,6 +413,10 @@
                 </div>
             </div>
             <div class="review  d-flex flex-column justify-content-center f-inter">
+                <div class="images d-flex mb-3 justify-content-center">
+                    <img src="./public/joystick.png" alt="" style="width: 250px;">
+                    
+                </div>
                 <p class="text-black fw-medium text-center f-inter">&nbsp;&nbsp;&nbsp;&nbsp;My journey began as an esports
                     player, but Thug knew that it wasn't viable career option in India at
                     that time. So I started my youtube journey, with a bunch of people I consider as family. We together
@@ -529,7 +533,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
-    <script src="./main.js"></script>
+    <script src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
