--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,7 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand m-0" href="main.html"><img src="./public/link@2x.png" alt="Bootstrap"
+            <a class="navbar-brand m-0" href="index.html"><img src="./public/link@2x.png" alt="Bootstrap"
                     width="90px"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav">
@@ -155,33 +155,33 @@
                         <img src="./public/Surasak-Winij.png" class="card-img-top" alt="...">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title f-inter">Surasak Winij</h6>
-                            <p class="card-text f-inter">VP Talent Thailand</p>
-                            <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
+                                <p class="card-text f-inter">VP Talent Thailand</p>
+                                <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="card" style="width: 15rem;">
                         <img src="./public/Punit-Mantri.png" class="card-img-top" alt="...">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title f-inter">Punit Mantri</h6>
-                            <p class="card-text f-inter">Regional Financial Controller</p>
-                            <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
+                                <p class="card-text f-inter">Regional Financial Controller</p>
+                                <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="card" style="width: 15rem;">
                         <img src="./public/Sascha-Jochum.png" class="card-img-top" alt="...">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title f-inter">Sascha Jochum</h6>
-                            <p class="card-text f-inter">Director of Ampverse Labs &
-                                Web3</p>
-                            <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
+                                <p class="card-text f-inter">Director of Ampverse Labs &
+                                    Web3</p>
+                                <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
                         </div>
                     </div>
                     <div class="card" style="width: 15rem;">
                         <img src="./public/Rob-Gaxiola.png" class="card-img-top" alt="...">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title f-inter">Rob Gaxiola</h6>
-                            <p class="card-text f-inter">Head of Creative</p>
-                            <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
+                                <p class="card-text f-inter">Head of Creative</p>
+                                <a href="#" class="mt-auto"><img src="./public/lnkdin-roung.svg" alt=""></a>
                         </div>
                     </div>
 
