--- a/ec.html
+++ b/ec.html
@@ -28,7 +28,7 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand m-0" href="main.html"><img src="./public/link@2x.png" alt="Bootstrap"
+            <a class="navbar-brand m-0" href="index.html"><img src="./public/link@2x.png" alt="Bootstrap"
                     width="90px"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav">
@@ -100,7 +100,8 @@
                 <div class=" p-5">
                     <h4 class="fw-bold f-inter">PERFORMANCE <br> MARKETING</h4>
                     <div class="bg-orange p-1 d-flex px-2 " style="width: 10rem;"></div>
-                    <p class="mt-4 f-inter-100">Our comprehensive platform, revolutionizes online campaigns with user onboarding,
+                    <p class="mt-4 f-inter-100">Our comprehensive platform, revolutionizes online campaigns with user
+                        onboarding,
                         real-time
                         insights, rewards, and outstanding results. At Executor Creatives, we specialize in gaming
                         influencer marketing tailored to the interactive entertainment industry. Join forces with us to
@@ -113,7 +114,8 @@
                 <div class=" p-5">
                     <h4 class="fw-bold f-inter">PERFORMANCE <br> MARKETING</h4>
                     <div class="bg-orange p-1 d-flex px-2 " style="width: 10rem;"></div>
-                    <p class="mt-4 f-inter-100">Our comprehensive platform, revolutionizes online campaigns with user onboarding,
+                    <p class="mt-4 f-inter-100">Our comprehensive platform, revolutionizes online campaigns with user
+                        onboarding,
                         real-time
                         insights, rewards, and outstanding results. At Executor Creatives, we specialize in gaming
                         influencer marketing tailored to the interactive entertainment industry. Join forces with us to
@@ -129,7 +131,8 @@
                 <div class=" p-5">
                     <h4 class="fw-bold f-inter">PERFORMANCE <br> MARKETING</h4>
                     <div class="bg-orange p-1 d-flex px-2 " style="width: 10rem;"></div>
-                    <p class="mt-4 f-inter-100">Our comprehensive platform, revolutionizes online campaigns with user onboarding,
+                    <p class="mt-4 f-inter-100">Our comprehensive platform, revolutionizes online campaigns with user
+                        onboarding,
                         real-time
                         insights, rewards, and outstanding results. At Executor Creatives, we specialize in gaming
                         influencer marketing tailored to the interactive entertainment industry. Join forces with us to
