--- a/es.html
+++ b/es.html
@@ -28,7 +28,7 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand m-0" href="main.html"><img src="./public/link@2x.png" alt="Bootstrap"
+            <a class="navbar-brand m-0" href="index.html"><img src="./public/link@2x.png" alt="Bootstrap"
                     width="90px"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav">
@@ -87,7 +87,8 @@
                     <h1 class="f-oswald fw-bold m-0 text-black">EXO &nbsp;</h1>
                     <h1 class="f-oswald fw-bold m-0 orange"> SERVER</h1>
                 </div>
-                <p class="text-black text-center f-opensans">Exo Server is an innovative video games operating servers. Currently,
+                <p class="text-black text-center f-opensans">Exo Server is an innovative video games operating servers.
+                    Currently,
                     we operate
                     Exo
                     Town which reach over 120K gamers</p>
