--- a/team.html
+++ b/team.html
@@ -28,7 +28,7 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand m-0" href="main.html"><img src="./public/link@2x.png" alt="Bootstrap"
+            <a class="navbar-brand m-0" href="index.html"><img src="./public/link@2x.png" alt="Bootstrap"
                     width="90px"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav">
