--- a/creators.html
+++ b/creators.html
@@ -89,7 +89,7 @@
                     <h6 class="font-bold text-center m-0  p-3">Gaming Creators</h6>
                 </a>
                 <a href="#">
-                    <h6 class="font-bold text-center m-0  p-3">Lyfestyle Creators</h6>
+                    <h6 class="font-bold text-center m-0  p-3">Lifestyle Creators</h6>
                 </a>
             </div>
             <div class="members mx-3 d-flex gap-4 flex-wrap justify-content-center p-4">
@@ -156,8 +156,15 @@
                         <a href="#"><img src="./public/ig-l.svg" alt=""></a>
                     </div>
                 </div>
-
-
+                <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                    <div class="name text-light fw-bold">
+                        <h3 class="m-0">Naincy</h3>
+                    </div>
+                    <div class="socials d-flex gap-2">
+                        <a href="#"><img src="./public/yt.svg" alt=""></a>
+                        <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                    </div>
+                </div>
             </div>
         </section>
 
